--- a/multi-turn-chat-client/index.html
+++ b/multi-turn-chat-client/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>多轮对话客户端</title>
+    <title>软件开发评审室</title>
   </head>
   <body>
     <div id="root"></div>
